name:                wai-middleware-ip-block
version:             0.1.0.0
synopsis:            Block requests by IP CIDR
homepage:            https://github.com/enolan/wai-middleware-ip-block#readme
license:             BSD3
license-file:        LICENSE
author:              Echo Nolan
maintainer:          echo@echonolan.net
copyright:           2017 Echo Nolan
category:            Web
build-type:          Simple
extra-source-files:  README.md, CHANGELOG.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Network.Wai.Middleware.IpBlock
  build-depends:       aeson == 1.0.*, base >= 4.7 && < 5, bytestring >= 0.10,
                       http-types >= 0.9, iproute == 1.7.*, network >= 2.6,
                       text == 1.2.*, unordered-containers == 0.2.*,
                       wai == 3.2.*, yaml == 0.8.*
  default-language:    Haskell2010
  ghc-options:         -fdefer-typed-holes -Wall

source-repository head
  type:     git
  location: https://github.com/enolan/wai-middleware-ip-block
