name:                wai-middleware-ip-block
version:             0.1.0.0
synopsis:            Block requests by IP CIDR
homepage:            https://github.com/enolan/wai-middleware-ip-block#readme
license:             BSD3
license-file:        LICENSE
author:              Echo Nolan
maintainer:          echo@echonolan.net
copyright:           2017 Echo Nolan
category:            Web
build-type:          Simple
extra-source-files:  README.md, CHANGELOG.md
cabal-version:       >=1.10
description:         A WAI middleware that blocks incoming requests based on
                     their IPs, using CIDR ranges.

library
  hs-source-dirs:      src
  exposed-modules:     Network.Wai.Middleware.IpBlock
  build-depends:       aeson, base, bytestring, http-types, iproute, network,
                       text, unordered-containers, wai, yaml
  default-language:    Haskell2010
  ghc-options:         -fdefer-typed-holes -Wall

test-suite tasty
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Tasty.hs
  other-modules:       IpBlockTest
  build-depends:       wai-middleware-ip-block, base, bytestring, http-types,
                       iproute, network, tasty, tasty-discover, tasty-hunit,
                       wai, wai-extra
  ghc-options:         -fdefer-typed-holes -Wall
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/enolan/wai-middleware-ip-block
